--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-MisOriginationDetectionSystem.sublime-project
-MisOriginationDetectionSystem.sublime-workspace
-data/temp/*
-data/RIPE_DL/*
-data/RIPE_BGPDUMP/*
+/data/*/*
+!/data/RIPE/*
+/data/RIPE/*/*
+/log/*/*
 !.gitkeep
