ASと国の紐づけをCronで取得するように変更
GetASCountryコマンドを削除
CronASCountryコマンドを追加
CronASCountryコマンドは毎回，紐付けデータ取得済みの日の次の日のデータの取得を試行する

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+/data/ASCountry.sqlite3
 /data/*/*
 !/data/RIPE/*
 /data/RIPE/*/*
+!/data/ASCountry/*
+/data/ASCountry/*/*
 /log/*/*
 !.gitkeep
 .DS_Store
