FilterSuspiciousAdvertisementSummaryサブコマンドを追加
AnalyseAdvertisementUpdateの結果のハイジャックの可能性があるものをホワイトリストを用いて分類
FilterSuspiciousAdvertisementの結果から，各時刻毎の各conflict_typeの数を集計する（作図用）

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /data/RIPE/*/*
 !/data/ASCountry/*
 /data/ASCountry/*/*
+!/data/FilterSuspiciousAdvertisement/*
+/data/FilterSuspiciousAdvertisement/*/*
 /log/*/*
 !.gitkeep
 .DS_Store
